# beacon_slots_reader

./: .env_sample  Cargo.toml  README.md
api/: README.md
api/src/: main.rs
fetcher/: Cargo.toml
fetcher/src/: db.rs  decode.rs  fetch.rs  main.rs  types.rs
migrations/: 001_slots_info.sql
src/: calculation.rs  db.rs  lib.rs  main.rs  types.rs
