[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.10.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "3.0.13", features = ["derive"] }
serde = { version = "1.0.167", features = ["derive"] }
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio-rustls" ] }