[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
clap = { version = "3.0.13", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.167", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio-rustls" ] }

